--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.21.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.9.7",
+    "ngx-mat-timepicker": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
